--- a/_site.yml
+++ b/_site.yml
@@ -4,11 +4,11 @@ navbar:
   title: "Dominique Makowski"                               
   type: inverse
   left:
-    - text: "About"
-      icon: fa-user 
+    - text: " About"
+      icon: fa-user-circle-o
       href: about.html
     - text: "Research"
-      icon: fa-leaf
+      icon: fa-rebel
       href: research.html
     - text: "R Packages"
       icon: fa-dropbox
@@ -41,7 +41,7 @@ navbar:
       icon: fa-linkedin
       href: https://www.linkedin.com/in/dominiquemakowski/
     - text: ""
-      icon: fa-researchgate
+      icon: fa-trophy
       href: https://www.researchgate.net/profile/Dominique_Makowski
 output:
   html_document:
