--- a/.github/workflows/copy_posts.yml
+++ b/.github/workflows/copy_posts.yml
@@ -22,4 +22,4 @@ jobs:
         destination_folder: 'content/post/'
         user_email: 'dom.makowski@gmail.com'
         user_name: 'DominiqueMakowski'
-        commit_message: 'Copying posts from Dom's to REBEL's websites.'
+        commit_message: "Copying posts from Dom's to REBEL's websites."
