--- a/.github/workflows/copy_posts.yml
+++ b/.github/workflows/copy_posts.yml
@@ -18,7 +18,7 @@ jobs:
         API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }} # ${{ secrets.API_TOKEN_GITHUB }}
       with:
         source_file: 'content/post/'
-        github_server: 'github.com'
+        git_server: 'github.com'
         destination_repo: 'RealityBending/RealityBending.github.io'
         destination_folder: 'content/post/'
         user_email: 'dom.makowski@gmail.com'
