--- a/.github/workflows/copy_posts.yml
+++ b/.github/workflows/copy_posts.yml
@@ -18,9 +18,9 @@ jobs:
         API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }} # ${{ secrets.API_TOKEN_GITHUB }}
       with:
         source_file: 'content/post/'
-        git_server: 'github.com'
-        destination_repo: 'github.com/RealityBending/RealityBending.github.io'
+        destination_repo: 'RealityBending/RealityBending.github.io'
         destination_folder: 'content/post/'
         user_email: 'dom.makowski@gmail.com'
         user_name: 'DominiqueMakowski'
         commit_message: "Copying posts from Dom's to REBEL's websites."
+        git_server: 'github.com'
