--- a/.github/workflows/copy_posts.yml
+++ b/.github/workflows/copy_posts.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Pushes test file
       uses: TomoeMami/copy_file_to_another_repo_action@main # dmnemec/copy_file_to_another_repo_action@main
       env:
-        API_TOKEN_GITHUB: ${{ secrets.GITHUB_TOKEN }} # ${{ secrets.API_TOKEN_GITHUB }}
+        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
       with:
         source_file: 'content/post/'
         destination_repo: 'RealityBending/RealityBending.github.io'
