--- a/.github/workflows/copy_posts.yml
+++ b/.github/workflows/copy_posts.yml
@@ -22,5 +22,5 @@ jobs:
         destination_folder: 'content/'
         user_email: 'dom.makowski@gmail.com'
         user_name: 'DominiqueMakowski'
-        commit_message: "Copying posts from Dom's to REBEL's websites."
+        commit_message: "AUTO: Copying posts from Dom's to REBEL's websites"
         git_server: 'github.com'
