--- a/.github/workflows/copy_posts.yml
+++ b/.github/workflows/copy_posts.yml
@@ -12,7 +12,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Pushes test file
+    # Copy the 'post' folder
+    - name: Push posts
       # Change the following repo after this is fixed:
       # https://github.com/dmnemec/copy_file_to_another_repo_action/issues/44dmnemec/copy_file_to_another_repo_action@main
       uses: TomoeMami/copy_file_to_another_repo_action@main
@@ -24,5 +25,21 @@ jobs:
         destination_folder: 'content/' # Folder where to copy it
         user_email: 'dom.makowski@gmail.com'
         user_name: 'DominiqueMakowski'
-        commit_message: "AUTO: Copying posts from Dom's to REBEL's websites"
+        commit_message: "AUTO: Copying posts from Dom's to REBEL's website"
+        git_server: 'github.com'
+
+    # Copy the 'publication' folder
+    - name: Push publications
+      # Change the following repo after this is fixed:
+      # https://github.com/dmnemec/copy_file_to_another_repo_action/issues/44dmnemec/copy_file_to_another_repo_action@main
+      uses: TomoeMami/copy_file_to_another_repo_action@main
+      env:
+        API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+      with:
+        source_file: 'content/publication/' # Folder to copy
+        destination_repo: 'RealityBending/RealityBending.github.io' # Target repo
+        destination_folder: 'content/' # Folder where to copy it
+        user_email: 'dom.makowski@gmail.com'
+        user_name: 'DominiqueMakowski'
+        commit_message: "AUTO: Copying publications from Dom's to REBEL's website"
         git_server: 'github.com'
