--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -146,7 +146,7 @@ search:
     index_name: ''
     show_logo: false
 map:
-  provider: ""
+  provider: mapnik
   api_key: ''
   zoom: 3
 marketing:
