--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Pandoc
         uses: r-lib/actions/setup-pandoc@v1
 
-      - name: Install rmarkdown, blogdown # might need knitr
+      - name: Install rmarkdown, blogdown
         run: Rscript -e 'install.packages(c("rmarkdown","blogdown"))'
 
       - name: Install hugo
@@ -32,7 +32,6 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          # publish_dir: ./docs
 
 
 
