--- a/config.yaml
+++ b/config.yaml
@@ -69,3 +69,8 @@ related:
       weight: 100
     - name: categories
       weight: 70
+security:
+  funcs:
+    getenv:
+      - ^HUGO_
+      - ^WC_
