--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,7 @@
 on:
   push:
-     branches:
-       - master
-
+    branches:
+      - master
 
 name: 🚀 Build and Deploy
 
@@ -11,13 +10,13 @@ jobs:
     runs-on: macOS-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@main
 
       - name: Setup R
-        uses: r-lib/actions/setup-r@master
+        uses: r-lib/actions/setup-r@v2
 
       - name: Setup Pandoc
-        uses: r-lib/actions/setup-pandoc@v1
+        uses: r-lib/actions/setup-pandoc@v2
 
       - name: Install rmarkdown, blogdown
         run: Rscript -e 'install.packages(c("rmarkdown","blogdown"))'
@@ -32,6 +31,3 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-
-
-
