--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ name: 🚀 Build and Deploy
 
 jobs:
   build:
-    runs-on: windows-latest # macOS-latest
+    runs-on: ubuntu-latest # windows-latest, macOS-latest
     steps:
       - name: Checkout
         uses: actions/checkout@main
